--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "babel-loader": "^8.2.3",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1"
+  },
+  "dependencies": {
+    "react-redux": "^7.2.6"
   }
 }
